tests/models/enum/named/u16/fail/max_items.stderr
error: Support condition is gt, ge, lt, le, alias, default and validate
 --> tests/models/enum/named/u16/fail/max_items.rs:6:9
  |
6 |         value: u16
  |         ^^^^^
